TRUNK
=====

-   Module statuses
-   SNI support (not completely finished)
-   CORS handling now provided by mod\_http
-   CSI improvements
-   mod\_limits: Exempted JIDs
-   Archive quotas
-   mod_mimicking: Prevent address spoofing
-   Rewritten migrator
-   SCRAM-SHA-256
-   Bi-directional server-to-server (XEP-0288)
-   Built-in HTTP server now handles HEAD requests
-   MUC presence broadcast controls
-   ALPN support in mod\_net\_multiplex
-   `daemonize` option deprecated
-   SASL DIGEST-MD5 removed
-   Switch to libunbound for DNS queries
-   mod_external_services (XEP-0215)
-   util.error for encapsulating errors
-   MUC: support for XEP-0421 occupant identifiers
-   mod_http_file_share: File sharing via HTTP (XEP-0363)
-   statistics scheduling can be done by plugin
-   mod_server_contact_info now loaded on components if enabled

0.11.0
======

**2018-11-18**

New features
------------

-   Rewritten more extensible MUC module
    -   Store inactive rooms to disk
    -   Store rooms to disk on shutdown
    -   Voice requests
    -   Tombstones in place of destroyed rooms
-   PubSub features
    -   Persistence
    -   Affiliations
    -   Access models
    -   "publish-options"
-   PEP now uses our pubsub code and now shares the above features
-   Asynchronous operations
-   Busted for tests
-   mod\_muc\_mam (XEP-0313 in groupchats)
-   mod\_vcard\_legacy (XEP-0398)
-   mod\_vcard4 (XEP-0292)
-   mod\_csi, mod\_csi\_simple (XEP-0352)
-   New experimental network backend "epoll"

0.10.0
======

**2017-10-02**

New features
------------

-   Rewritten SQL storage module with Archive support
-   SCRAM-SHA-1-PLUS
-   `prosodyctl check`
-   Statistics
-   Improved TLS configuration
-   Lua 5.2 support
-   mod\_blocklist (XEP-0191)
-   mod\_carbons (XEP-0280)
-   Pluggable connection timeout handling
-   mod\_websocket (RFC 7395)
-   mod\_mam (XEP-0313)

Removed
-------

-   mod\_privacy (XEP-0016)
-   mod\_compression (XEP-0138)